--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,32 +14,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-03 Thu 11:11]
+#+CAPTION: Clock summary at [2016-11-03 Thu 11:56]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *42:39* |       |      | 100.0 |
+| *Total time*                                                                | *43:22* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 42:39   |       |      | 100.0 |
-| Active                                                                      |         | 42:39 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   2.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.9 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.7 |
+| Stories                                                                     | 43:22   |       |      | 100.0 |
+| Active                                                                      |         | 43:22 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   2.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.8 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.6 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.5 |
 | COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.5 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.4 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  16.4 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.5 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  16.1 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.3 |
 | COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.3 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.3 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.1 |
 | COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.2 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   8.9 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  22.4 |
-| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  11.7 |
-| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.6 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   8.8 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  22.1 |
+| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  11.5 |
+| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.5 |
 | COMPLETED Fix borked build due to seam errors                               |         |       | 0:12 |   0.5 |
-| COMPLETED Various fixes due to stitch changes                               |         |       | 0:22 |   0.9 |
+| COMPLETED Various fixes due to stitch changes                               |         |       | 0:22 |   0.8 |
 | COMPLETED Implement formatter implementation using stitch and wale          |         |       | 1:04 |   2.5 |
+| STARTED Move stitching into knit                                            |         |       | 0:43 |   1.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -429,13 +430,25 @@ notice it locally due to the usual caching of test data.
 Now the templates have been merged we can start to look into using
 wale.
 
-*** Move stitching into knit                                          :story:
+*** STARTED Move stitching into knit                                  :story:
+    CLOCK: [2016-11-03 Thu 11:12]--[2016-11-03 Thu 11:55] =>  0:43
 
 Once all templates have been updated with wale, we need to:
 
-- setup the profiles with the correct input;
-- move wale template name into profile;
-- remove kvps from templates;
+- move wale template name into profile; this cannot be done because we
+  now have four different wale templates:
+
+: find . -iname '*.stitch' -exec grep "stitch.wale.template=" {} \; | sort | uniq
+: <#@ stitch.wale.template=artefact_formatter_implementation.wale #>
+: <#@ stitch.wale.template=artefact_formatter_implementation_header.wale #>
+: <#@ stitch.wale.template=helper_formatter_implementation.wale #>
+: <#@ stitch.wale.template=helper_formatter_implementation_enabled.wale #>
+
+  In order to use a profile we would need four different
+  profiles. Since its only one field, the work is not worth the effort.
+- setup the dogen knit profiles with the correct input;
+- remove kvps from templates: if we make the external kvps take
+  priorities, we can then do this one template at a time.
 - remove stitch target.
 
 *** Merge properties factory with stitching factory                   :story:
