--- a/doc/agile/sprint_backlog_91.org
+++ b/doc/agile/sprint_backlog_91.org
@@ -14,33 +14,33 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-03 Thu 11:56]
+#+CAPTION: Clock summary at [2016-11-03 Thu 14:49]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *43:22* |       |      | 100.0 |
+| *Total time*                                                                | *44:10* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 43:22   |       |      | 100.0 |
-| Active                                                                      |         | 43:22 |      | 100.0 |
+| Stories                                                                     | 44:10   |       |      | 100.0 |
+| Active                                                                      |         | 44:10 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 1:14 |   2.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:22 |   0.8 |
-| COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.6 |
+| COMPLETED Improve bintray support                                           |         |       | 2:26 |   5.5 |
 | COMPLETED Add logo with white background                                    |         |       | 0:14 |   0.5 |
-| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.5 |
+| COMPLETED Consider renaming =diagrams= to =input_models=                    |         |       | 0:38 |   1.4 |
 | COMPLETED Add kvp support to annotations                                    |         |       | 0:37 |   1.4 |
-| COMPLETED Implement wale                                                    |         |       | 7:00 |  16.1 |
-| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.3 |
-| COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.3 |
-| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.1 |
-| COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.2 |
-| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   8.8 |
-| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  22.1 |
-| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  11.5 |
-| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.5 |
+| COMPLETED Implement wale                                                    |         |       | 7:00 |  15.8 |
+| COMPLETED Add artefact source properties support                            |         |       | 3:11 |   7.2 |
+| COMPLETED Stitch not writing when template has changed                      |         |       | 0:33 |   1.2 |
+| COMPLETED Implement helper headers using wale                               |         |       | 2:40 |   6.0 |
+| COMPLETED Implement formatter headers using wale                            |         |       | 0:30 |   1.1 |
+| COMPLETED Add profile support to stitch                                     |         |       | 3:48 |   8.6 |
+| COMPLETED Changes to stitch to accommodate wale                             |         |       | 9:34 |  21.7 |
+| COMPLETED Implement formatter helpers implementation using stitch and wale  |         |       | 5:00 |  11.3 |
+| COMPLETED Merge stitch templates with formatters                            |         |       | 3:14 |   7.3 |
 | COMPLETED Fix borked build due to seam errors                               |         |       | 0:12 |   0.5 |
 | COMPLETED Various fixes due to stitch changes                               |         |       | 0:22 |   0.8 |
-| COMPLETED Implement formatter implementation using stitch and wale          |         |       | 1:04 |   2.5 |
-| STARTED Move stitching into knit                                            |         |       | 0:43 |   1.7 |
+| COMPLETED Implement formatter implementation using stitch and wale          |         |       | 1:04 |   2.4 |
+| STARTED Move stitching into knit                                            |         |       | 1:31 |   3.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -431,12 +431,34 @@ Now the templates have been merged we can start to look into using
 wale.
 
 *** STARTED Move stitching into knit                                  :story:
+    CLOCK: [2016-11-03 Thu 14:01]--[2016-11-03 Thu 14:49] =>  0:48
     CLOCK: [2016-11-03 Thu 11:12]--[2016-11-03 Thu 11:55] =>  0:43
 
-Once all templates have been updated with wale, we need to:
+The idea of internal and external kvps doesn't actually make a lot of
+sense. The problem is that we forgot about the levels of formatter
+indirection: when we are code generating the =class_header_formatter=,
+we use the =class_implementation_formatter=. To recap:
 
-- move wale template name into profile; this cannot be done because we
-  now have four different wale templates:
+- we instantiate a yarn model into memory. The formatter is a
+  =yarn::object=. This means a =enum_header_formatter= is represented
+  by a =yarn::object=.
+- we then look at a particular facet of that element, say its
+  implementation in types. For this we will use the stock
+  =class_implementation_formatter=.
+- however, we can override this and use the =stitch_formatter=. The
+  stitch formatter will have an associated template, which is "yarn
+  type dependent". In this case, =enum_header_formatter.stitch=.
+- this template makes use of wale and needs the kvps. However, from a
+  knit perspective the yarn element is a =yarn::object= rather than a
+  =yarn::enumeration=.
+
+Thus it is not possible to automatically derive all kvps from the
+meta-model. We should just remove the concept of external kvps and
+rely on internal kvps only. To be clear, this only applies to stitch
+(there are only one set of kvps at the wale level).
+
+In terms of profiles: we can't have a single profile for say artefact
+formatters because we now have four different wale templates:
 
 : find . -iname '*.stitch' -exec grep "stitch.wale.template=" {} \; | sort | uniq
 : <#@ stitch.wale.template=artefact_formatter_implementation.wale #>
@@ -444,8 +466,32 @@ Once all templates have been updated with wale, we need to:
 : <#@ stitch.wale.template=helper_formatter_implementation.wale #>
 : <#@ stitch.wale.template=helper_formatter_implementation_enabled.wale #>
 
-  In order to use a profile we would need four different
-  profiles. Since its only one field, the work is not worth the effort.
+In order to use a profile we would need four different profiles. Since
+its only one field, the work is not worth the effort. In addition, the
+remaining kvps also do not lend themselves to easy profiling:
+
+: <#@ stitch.wale.kvp.archetype.simple_name=class_header #>
+: <#@ stitch.wale.kvp.class.inclusion_support_type=canonical_support #>
+: <#@ stitch.wale.kvp.yarn_element=yarn::object #>
+: <#$ stitch.wale.template_instantiation_result #>
+
+We would end up with a large number of profiles (object headers, enum
+headers and so forth) and it would become even more confusing.
+
+Tasks:
+
+- remove external kvps.
+- setup profiles to use the correct input source with
+  overwrite. Diagram should "just work".
+
+: #DOGEN quilt.cpp.types.class_implementation.formatting_style=stitch_wale
+: #DOGEN quilt.cpp.types.class_implementation.overwrite=true#</dia:string>
+
+*Previous Understanding*
+
+Once all templates have been updated with wale, we need to:
+
+- move wale template name into profile
 - setup the dogen knit profiles with the correct input;
 - remove kvps from templates: if we make the external kvps take
   priorities, we can then do this one template at a time.
