--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,22 +12,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-10 Thu 12:12]
+#+CAPTION: Clock summary at [2016-11-10 Thu 13:13]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *19:22* |       |      | 100.0 |
+| *Total time*                                                                | *20:22* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 19:22   |       |      | 100.0 |
-| Active                                                                      |         | 19:22 |      | 100.0 |
-| STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   0.9 |
-| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   2.3 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   5.8 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   9.9 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   5.9 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  19.2 |
-| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   3.4 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:54 |  51.1 |
+| Stories                                                                     | 20:22   |       |      | 100.0 |
+| Active                                                                      |         | 20:22 |      | 100.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   0.8 |
+| COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   2.2 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   5.5 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   9.4 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   5.6 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  18.2 |
+| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   3.2 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:54 |  48.6 |
+| STARTED Add a utility that converts a dia model into JSON                   |         |       | 1:00 |   4.9 |
 | STARTED External module path for target should be in diagram                |         |       | 0:18 |   1.5 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -260,6 +261,21 @@ that is also required by JSON and move it to yarn.
 We should have a look at the Boost Fusion approach:
 
 - [[http://jrruethe.github.io/blog/2015/05/21/boost-fusion-json-serializer/][Boost Fusion JSON Serialiser]]
+
+*** STARTED Add a utility that converts a dia model into JSON          :epic:
+    CLOCK: [2016-11-10 Thu 12:13]--[2016-11-10 Thu 13:13] =>  1:00
+
+#+begin_quote
+*Story*: As a dogen user, I want to convert some Dia models into JSON
+documents whenever I don't require UML and diagram formatting, so that
+I don't have to generate the documents manually.
+#+end_quote
+
+It would be great if one could take a dia model and convert it into a
+JSON representation. This would allow users to take models that are
+not particularly useful in UML and convert them into JSON.
+
+Name according to convention: tailor. General coversion tool.
 
 *** STARTED External module path for target should be in diagram      :story:
     CLOCK: [2016-11-08 Tue 15:46]--[2016-11-08 Tue 16:04] =>  0:18
