--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -12,24 +12,24 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-10 Thu 13:13]
+#+CAPTION: Clock summary at [2016-11-10 Thu 14:42]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *20:22* |       |      | 100.0 |
+| *Total time*                                                                | *20:55* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 20:22   |       |      | 100.0 |
-| Active                                                                      |         | 20:22 |      | 100.0 |
+| Stories                                                                     | 20:55   |       |      | 100.0 |
+| Active                                                                      |         | 20:55 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   0.8 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   2.2 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   5.5 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   9.4 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   5.6 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  18.2 |
-| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   3.2 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:54 |  48.6 |
-| STARTED Add a utility that converts a dia model into JSON                   |         |       | 1:00 |   4.9 |
-| STARTED External module path for target should be in diagram                |         |       | 0:18 |   1.5 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   5.3 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   9.2 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   5.5 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  17.8 |
+| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   3.1 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:54 |  47.3 |
+| STARTED Add a utility that converts a dia model into JSON                   |         |       | 1:33 |   7.4 |
+| STARTED External module path for target should be in diagram                |         |       | 0:18 |   1.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -263,6 +263,7 @@ We should have a look at the Boost Fusion approach:
 - [[http://jrruethe.github.io/blog/2015/05/21/boost-fusion-json-serializer/][Boost Fusion JSON Serialiser]]
 
 *** STARTED Add a utility that converts a dia model into JSON          :epic:
+    CLOCK: [2016-11-10 Thu 14:09]--[2016-11-10 Thu 14:42] =>  0:33
     CLOCK: [2016-11-10 Thu 12:13]--[2016-11-10 Thu 13:13] =>  1:00
 
 #+begin_quote
