--- a/doc/agile/sprint_backlog_92.org
+++ b/doc/agile/sprint_backlog_92.org
@@ -6,29 +6,30 @@
 * Mission Statement
 
 - implement dart.
+- add full support for JSON.
 
 * Stories
 
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2016-11-10 Thu 16:39]
+#+CAPTION: Clock summary at [2016-11-10 Thu 17:14]
 | <75>                                                                        |         |       |      |       |
 | Headline                                                                    | Time    |       |      |     % |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| *Total time*                                                                | *22:18* |       |      | 100.0 |
+| *Total time*                                                                | *22:52* |       |      | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+------+-------|
-| Stories                                                                     | 22:18   |       |      | 100.0 |
-| Active                                                                      |         | 22:18 |      | 100.0 |
+| Stories                                                                     | 22:52   |       |      | 100.0 |
+| Active                                                                      |         | 22:52 |      | 100.0 |
 | STARTED Sprint and product backlog grooming                                 |         |       | 0:10 |   0.7 |
 | COMPLETED Edit release notes for previous sprint                            |         |       | 0:27 |   2.0 |
-| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   5.0 |
-| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   8.6 |
-| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   5.2 |
-| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  16.7 |
-| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   2.9 |
-| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:54 |  44.4 |
-| STARTED Add a utility that converts a dia model into JSON                   |         |       | 2:56 |  13.2 |
+| COMPLETED Tidy-up README file                                               |         |       | 1:07 |   4.9 |
+| COMPLETED Sort out PIC/PIE linking problems                                 |         |       | 1:55 |   8.4 |
+| COMPLETED Try to fix BinTray problems                                       |         |       | 1:09 |   5.0 |
+| COMPLETED Supply model references via meta-data rather than command line    |         |       | 3:43 |  16.3 |
+| COMPLETED Remove trailing blank lines in comments                           |         |       | 0:39 |   2.8 |
+| STARTED Make JSON yarn a fully supported frontend                           |         |       | 9:54 |  43.3 |
+| STARTED Add a utility that converts a dia model into JSON                   |         |       | 3:30 |  15.3 |
 | STARTED External module path for target should be in diagram                |         |       | 0:18 |   1.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
@@ -263,6 +264,7 @@ We should have a look at the Boost Fusion approach:
 - [[http://jrruethe.github.io/blog/2015/05/21/boost-fusion-json-serializer/][Boost Fusion JSON Serialiser]]
 
 *** STARTED Add a utility that converts a dia model into JSON          :epic:
+    CLOCK: [2016-11-10 Thu 16:40]--[2016-11-10 Thu 17:14] =>  0:34
     CLOCK: [2016-11-10 Thu 16:23]--[2016-11-10 Thu 16:39] =>  0:16
     CLOCK: [2016-11-10 Thu 15:15]--[2016-11-10 Thu 16:22] =>  1:07
     CLOCK: [2016-11-10 Thu 14:09]--[2016-11-10 Thu 14:42] =>  0:33
